# GeneticAlgorithm

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.txt  helpers.cpp  main.cpp  run.sh
ConcreteGA/: CMakeLists.txt  GA.cpp
includes/: GA.h  helpers.hpp
